# ChangeLog for x11-terms/qterminal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qterminal-9999 (21 Jan 2009)

  21 Jan 2009; Ben de Groot <yngwin@gentoo.org> +qterminal-9999.ebuild:
  Initial import. Ebuild by Alex "wired" Alexander, editted by me.
