@@ -1,2 +1,2 @@
-EBUILD qterminal-9999.ebuild 1231 RMD160 2f547856eda5ba2d5a7423bc6b5e9c6e4ad2de5a SHA1 b52865184a7cbf80f263ebb26a08ab9ba0ea14ae SHA256 307c2842fa0c6692173738ce941671dc9b94898410d5616dd3a24e3b82faded1
-MISC ChangeLog 291 RMD160 dd0873bef33d2583273bef06bc5b6484d0f46107 SHA1 68a3becd9a79fa6a35c0b7c90a9f4f82f0b91bc4 SHA256 480d0a5382986abcccb70ce85a36331bb5e17f6c9a81ac4afcd31fe227f22856
+EBUILD qterminal-9999.ebuild 1003 RMD160 4c1c0ac76436e5560ec6e50a332c493769a2d301 SHA1 344ece976626db24dbb34df4aba6fde2ea991266 SHA256 3b2aec55e6f995ac2f8487b4c47163ae2d9d27205511e7ae68adf0503971a27e
+MISC ChangeLog 417 RMD160 254629893596b2a7881a4c5939d0a3196e3f82e9 SHA1 d479f4c3cacfac58872e3054f6ddf8ffb021de27 SHA256 712fd02480fc4f36e5be9c73b9588f360e7a2ed8f1f228996f6739445d744278
