@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jul 2009; Davide Pesavento <davidepesa@gmail.com>
+  qterminal-9999.ebuild:
+  Switch to qt4-edge eclass, ebuild cleanup.
+
 *qterminal-9999 (21 Jan 2009)
 
   21 Jan 2009; Ben de Groot <yngwin@gentoo.org> +qterminal-9999.ebuild:
